# sangam

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  cliff.toml  compose.yaml  justfile  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
deploy/: compose.prod.yaml
deploy/cloudflared/: config.example.yml
docs/: 0.1_READINESS_AUDIT.md  0.1_RELEASE_REPORT.md  AFTER_0.1.md  BRAND.md  IMPLEMENTATION_PHASES.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  UI_SYSTEM.md  VISION.md  WORKSPACE_BASE.md
docs/operations/: PHASE_1_OPERATIONS.md  PHASE_2_OPERATIONS.md  PHASE_3_OPERATIONS.md  PHASE_4_OPERATIONS.md  PHASE_5_OPERATIONS.md  PHASE_6_OPERATIONS.md  PHASE_7_OPERATIONS.md  RELEASE_CHECKLIST.md  UPGRADES_AND_ROLLBACK.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: check-ui-system.mjs  verify-mermaid.mjs
frontend/src/: api.test.ts  api.ts  citationNavigation.test.ts  citationNavigation.ts  documentSessions.test.ts  documentSessions.tsx  internalLinks.test.ts  internalLinks.ts  main.tsx  splitPolicy.ts  styles.css  theme.tsx  useMediaQuery.ts  workbench.tsx  workbenchLayout.test.ts  workbenchLayout.ts  workspaceTree.test.ts  workspaceTree.ts
scripts/: audit-dependencies.sh  docker-smoke.sh  fake-karakeep.py  release-preflight.sh  release.sh  restore-backup.py  smoke-installed-package.py  smoke-package.sh  validate-compose.sh  verify-docs.py  verify-release-config.py  verify-version.py
scripts/git-hooks/: commit-msg
src/sangam/: __init__.py  (+39 more)
tests/: conftest.py  test_api_lifecycle.py  test_application_services.py  test_chat_model_settings.py  test_cli.py  test_database.py  test_idempotency_and_paths.py  test_karakeep_components.py  test_migration_governance.py  test_phase_five_pdf_research.py  test_phase_four_publishing.py  test_phase_seven_chat.py  test_phase_six_karakeep.py  test_phase_three_agents.py  test_phase_two_workspace.py  test_reconciliation.py  test_recovery_and_reconciliation.py  test_release_configuration.py  test_reliability_wave.py  test_storage_consistency.py  test_workspace_filesystem.py  test_workspace_organization.py
(+82 files in other folders)
