[project]
name = "sangam"
version = "0.1.0"
description = "A small, self-hosted document server for humans and agents"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md"]
authors = [{ name = "Jay Shah" }]
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "markdownify>=1.2.3,<2",
  "openai-agents>=0.18.2,<1",
  "openai-chatkit>=1.6.5,<2",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "pypdf>=6.1,<7",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.urls]
Homepage = "https://github.com/jayshah5696/sangam"
Repository = "https://github.com/jayshah5696/sangam"
Issues = "https://github.com/jayshah5696/sangam/issues"

[project.scripts]
sangam = "sangam.cli:app"

[dependency-groups]
dev = [
  "httpx2>=2.5,<3",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sangam"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/NOTICE.md",
  "/README.md",
  "/pyproject.toml",
  "/src/sangam",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
